<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_send"
            android:title="@string/sent" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_drafts"
            android:title="@string/drafts" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/trash" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>
